--- a/app/src/main/res/layout/activity_create_new_lutemon.xml
+++ b/app/src/main/res/layout/activity_create_new_lutemon.xml
@@ -51,8 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Enter Lutemon Name"
         android:inputType="textPersonName"
-        android:text="Lutemon's name"
         app:layout_constraintEnd_toEndOf="@+id/colourCroup"
         app:layout_constraintStart_toStartOf="@+id/colourCroup"
         app:layout_constraintTop_toBottomOf="@+id/colourCroup" />
