--- a/app/src/main/res/layout/activity_create_new_lutemon.xml
+++ b/app/src/main/res/layout/activity_create_new_lutemon.xml
@@ -62,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:onClick="createLutemonType"
         android:text="Create lutemon"
         app:layout_constraintEnd_toEndOf="@+id/lutemonNameInput"
         app:layout_constraintStart_toStartOf="@+id/lutemonNameInput"
