--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
+        android:onClick="switchToCreateNewLutemon"
         android:text="Create new lutemon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -33,8 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Load lutemons"
-        app:layout_constraintTop_toBottomOf="@+id/listLutemonsButton"
-        tools:layout_editor_absoluteX="128dp" />
+        app:layout_constraintEnd_toEndOf="@+id/listLutemonsButton"
+        app:layout_constraintStart_toStartOf="@+id/listLutemonsButton"
+        app:layout_constraintTop_toBottomOf="@+id/listLutemonsButton" />
 
     <Button
         android:id="@+id/saveLutemonsButton"
