--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="switchToListLutemons"
         android:text="List lutemons"
         app:layout_constraintEnd_toEndOf="@+id/createNewLutemonButton"
         app:layout_constraintStart_toStartOf="@+id/createNewLutemonButton"
