--- a/app/src/main/res/layout/lutemon_view.xml
+++ b/app/src/main/res/layout/lutemon_view.xml
@@ -23,7 +23,7 @@
             android:id="@+id/txtLutemonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Name"
+            android:text="string/Name"
             android:textSize="20sp" />
 
         <TextView
