--- a/app/src/main/res/layout/activity_list_lutemons.xml
+++ b/app/src/main/res/layout/activity_list_lutemons.xml
@@ -9,5 +9,6 @@
         android:layout_width="409dp"
         android:layout_height="729dp"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
