--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="switchToTrainLutemon"
         android:text="Train"
         app:layout_constraintEnd_toEndOf="@+id/saveLutemonsButton"
         app:layout_constraintStart_toStartOf="@+id/saveLutemonsButton"
