--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="switchToSaveLutemons"
         android:text="Save lutemons"
         app:layout_constraintEnd_toEndOf="@+id/loadLutemonsButton"
         app:layout_constraintStart_toStartOf="@+id/loadLutemonsButton"
