--- a/app/src/main/res/layout/fragment_dead_lutemons.xml
+++ b/app/src/main/res/layout/fragment_dead_lutemons.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentDead"
-    android:background="@color/teal_700">
+    android:background="@color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:tools="http://schemas.android.com/tools"
