--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="switchToLoadLutemons"
         android:text="Load lutemons"
         app:layout_constraintEnd_toEndOf="@+id/listLutemonsButton"
         app:layout_constraintStart_toStartOf="@+id/listLutemonsButton"
