--- a/app/src/main/res/layout/battle_view_clickable.xml
+++ b/app/src/main/res/layout/battle_view_clickable.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="5dp"
-    android:background="@color/purple_200"
+    android:background="#85673AB7"
     android:orientation="horizontal">
 
     <ImageView
@@ -19,12 +19,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
         <TextView
             android:id="@+id/txtLutemonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="string/Name"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonColour"
@@ -56,4 +62,5 @@
             android:layout_height="wrap_content"
             android:text="Level" />
     </LinearLayout>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
