--- a/app/src/main/res/layout/fragment_battle2.xml
+++ b/app/src/main/res/layout/fragment_battle2.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FragmentAlive"
-    android:background="@color/white">
+    tools:context=".fragments.FragmentBattle2"
+    android:background="@color/teal_200">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
