--- a/app/src/main/res/layout/fragment_battle1.xml
+++ b/app/src/main/res/layout/fragment_battle1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentAlive"
-    android:background="@color/white">
+    android:background="@color/teal_200">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
