battle kehitetty valmiiksi UI:ta liittämistä varten

--- a/app/src/main/res/layout/battle_view_clickable.xml
+++ b/app/src/main/res/layout/battle_view_clickable.xml
@@ -19,11 +19,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="54dp">
+
+            <Button
+                android:id="@+id/btnSelect1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/txtLutemonName"
@@ -61,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Level" />
+
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
