--- a/app/src/main/res/layout/fragment_battle2.xml
+++ b/app/src/main/res/layout/fragment_battle2.xml
@@ -19,5 +19,15 @@
             tools:layout_editor_absoluteY="1dp"
             tools:ignore="MissingConstraints" />
 
+        <Button
+            android:id="@+id/btnFight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:text="Fight"
+            app:layout_constraintBottom_toBottomOf="@+id/rvLutemonList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
