--- a/app/src/main/res/layout/lutemon_view.xml
+++ b/app/src/main/res/layout/lutemon_view.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="12dp"
     android:background="@color/purple_200"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/lutemonImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -24,36 +25,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="string/Name"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/txtLutemonColour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Colour" />
+            android:text="Colour"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonAttack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Attack" />
+            android:text="Attack"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonDefence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Defence" />
+            android:text="Defence"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonHealth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Health" />
+            android:text="Health"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonLevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Level" />
+            android:text="Level"
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
