--- a/app/src/main/res/layout/activity_create_new_lutemon.xml
+++ b/app/src/main/res/layout/activity_create_new_lutemon.xml
@@ -6,81 +6,132 @@
     android:layout_height="match_parent"
     android:background="@drawable/create_lutemon">
 
-    <RadioGroup
-        android:id="@+id/colourCroup"
-        android:layout_width="305dp"
-        android:layout_height="240dp"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/whiteButton"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="White"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:layout_height="match_parent">
 
-        <RadioButton
-            android:id="@+id/greenButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Green"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                app:layout_constraintStart_toEndOf="@+id/colourCroup"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:srcCompat="@drawable/pinky" />
 
-        <RadioButton
-            android:id="@+id/pinkButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pink"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toEndOf="@+id/colourCroup"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/white" />
 
-        <RadioButton
-            android:id="@+id/orangeButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Orange"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="100dp"
+                android:layout_height="49dp"
+                app:layout_constraintStart_toEndOf="@+id/colourCroup"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"
+                app:srcCompat="@drawable/green" />
 
-        <RadioButton
-            android:id="@+id/blackButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Black"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-    </RadioGroup>
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                app:layout_constraintStart_toEndOf="@+id/colourCroup"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4"
+                app:srcCompat="@drawable/orange" />
 
-    <EditText
-        android:id="@+id/lutemonNameInput"
-        android:layout_width="306dp"
-        android:layout_height="74dp"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:hint="Enter Lutemon Name"
-        android:inputType="textPersonName"
-        android:textColor="@color/white"
-        android:textColorHint="#CCB5B5"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/colourCroup"
-        app:layout_constraintStart_toStartOf="@+id/colourCroup"
-        app:layout_constraintTop_toBottomOf="@+id/colourCroup" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="100dp"
+                android:layout_height="46dp"
+                app:layout_constraintStart_toEndOf="@+id/colourCroup"
+                app:layout_constraintTop_toBottomOf="@+id/imageView6"
+                app:srcCompat="@drawable/black" />
 
-    <Button
-        android:id="@+id/createLutemonButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:onClick="createLutemonType"
-        android:text="Create lutemon"
-        app:layout_constraintEnd_toEndOf="@+id/lutemonNameInput"
-        app:layout_constraintStart_toStartOf="@+id/lutemonNameInput"
-        app:layout_constraintTop_toBottomOf="@+id/lutemonNameInput" />
+            <RadioGroup
+                android:id="@+id/colourCroup"
+                android:layout_width="150dp"
+                android:layout_height="240dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <RadioButton
+                    android:id="@+id/whiteButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="White"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:id="@+id/greenButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Green"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:id="@+id/pinkButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pink"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:id="@+id/orangeButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Orange"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:id="@+id/blackButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Black"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/lutemonNameInput"
+                android:layout_width="306dp"
+                android:layout_height="74dp"
+                android:backgroundTint="@color/white"
+                android:ems="10"
+                android:hint="Enter Lutemon Name"
+                android:inputType="textPersonName"
+                android:textColor="@color/white"
+                android:textColorHint="#CCB5B5"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/colourCroup" />
+
+            <Button
+                android:id="@+id/createLutemonButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="createLutemonType"
+                android:text="Create lutemon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lutemonNameInput" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
