--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FragmentAlive"
-    android:background="@drawable/alivelutemonsbackground">
+    tools:context=".Training.TrainingActivity"
+    android:background="@color/teal_200">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,6 +18,16 @@
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp"
             tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/btnFight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:text="Fight"
+            app:layout_constraintBottom_toBottomOf="@+id/rvLutemonList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
