--- a/app/src/main/res/layout/battle_view_clickable.xml
+++ b/app/src/main/res/layout/battle_view_clickable.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="175dp"
     android:layout_marginTop="5dp"
-    android:background="#85673AB7"
+    android:background="#72597A91"
+
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/lutemonImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
@@ -38,37 +39,43 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="string/Name"
+            android:textColor="#FEFEFE"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtLutemonColour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Colour" />
+            android:text="Colour"
+            android:textColor="#FEFEFE" />
 
         <TextView
             android:id="@+id/txtLutemonAttack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Attack" />
+            android:text="Attack"
+            android:textColor="#FEFEFE" />
 
         <TextView
             android:id="@+id/txtLutemonDefence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Defence" />
+            android:text="Defence"
+            android:textColor="#FEFEFE" />
 
         <TextView
             android:id="@+id/txtLutemonHealth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Health" />
+            android:text="Health"
+            android:textColor="#FEFEFE" />
 
         <TextView
             android:id="@+id/txtLutemonLevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Level" />
+            android:text="Level"
+            android:textColor="#FEFEFE" />
 
     </LinearLayout>
 
