--- a/app/src/main/res/layout/lutemon_view.xml
+++ b/app/src/main/res/layout/lutemon_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="12dp"
-    android:background="@color/purple_500"
+    android:background="@android:color/transparent"
     android:orientation="horizontal">
 
     <ImageView
