--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/bordered_button"
         android:onClick="switchToLoadLutemons"
         android:text="Load lutemons"
         app:icon="@android:drawable/ic_menu_upload"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createNewLutemonButton"
-        android:background="@drawable/bordered_button"/>
+        app:layout_constraintTop_toBottomOf="@+id/createNewLutemonButton" />
 
     <Button
         android:id="@+id/saveLutemonsButton"
