--- a/app/src/main/res/layout/activity_battle_lutemon.xml
+++ b/app/src/main/res/layout/activity_battle_lutemon.xml
@@ -115,7 +115,7 @@
         app:layout_constraintVertical_bias="0.194" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/abilityImage"
         android:layout_width="93dp"
         android:layout_height="92dp"
         app:layout_constraintEnd_toEndOf="parent"
