--- a/app/src/main/res/layout/fight_view.xml
+++ b/app/src/main/res/layout/fight_view.xml
@@ -5,13 +5,14 @@
     android:id="@+id/ConsBattleUI"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Battle.BattleFightActivity">
+    tools:context=".Battle.BattleFightActivity"
+    android:background="@drawable/battlefield">>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayoutUI"
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        android:background="#6A6A6A"
+        android:background="#CDB796"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,7 +71,7 @@
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
             android:background="@color/white"
-            android:progressTint="#AAFF00"
+            android:progressTint="#50C878"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/playerLutemonImage"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +83,7 @@
             android:id="@+id/txtHP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="15dp"
             android:text="HP /MaxHp"
             android:textStyle="bold"
@@ -102,8 +104,8 @@
 
     <ImageView
         android:id="@+id/imageLutemon1Small"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayoutUI"
@@ -112,47 +114,46 @@
 
     <ImageView
         android:id="@+id/imageLutemon2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="136dp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLutemon2Name"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/txtLutemon2Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
         android:text="Lutemon2 Name"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imageLutemon2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/imageLutemon2"
+        app:layout_constraintEnd_toEndOf="@+id/imageLutemon2"
+        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintStart_toStartOf="@+id/imageLutemon2" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtHP2"
         app:layout_constraintEnd_toEndOf="@+id/imageLutemon2"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageLutemon2"
-        app:layout_constraintTop_toBottomOf="@+id/imageLutemon2" />
+        app:layout_constraintStart_toStartOf="@+id/imageLutemon2" />
 
     <TextView
         android:id="@+id/txtHP2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="300dp"
         android:text="HP/MaxHp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutUI"
         app:layout_constraintEnd_toEndOf="@+id/progressBar2"
-        app:layout_constraintStart_toStartOf="@+id/progressBar2"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
+        app:layout_constraintStart_toStartOf="@+id/progressBar2" />
 
     <Button
         android:id="@+id/btnReturn"
