--- a/app/src/main/res/layout/fight_view.xml
+++ b/app/src/main/res/layout/fight_view.xml
@@ -155,6 +155,18 @@
         app:layout_constraintEnd_toEndOf="@+id/progressBar2"
         app:layout_constraintStart_toStartOf="@+id/progressBar2" />
 
+    <TextView
+        android:id="@+id/txtWinner"
+        android:layout_width="192dp"
+        android:layout_height="57dp"
+        android:text="Winner is"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
+        app:layout_constraintEnd_toEndOf="@+id/btnReturn"
+        app:layout_constraintStart_toStartOf="@+id/btnReturn" />
+
     <Button
         android:id="@+id/btnReturn"
         android:layout_width="wrap_content"
