lisätty statsilaskimet: Battles, victories, level, defeats. Training days puuttuu vielä

--- a/app/src/main/res/layout/lutemon_view.xml
+++ b/app/src/main/res/layout/lutemon_view.xml
@@ -32,7 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Colour"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtLutemonAttack"
