--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="10dp"
-    android:background="@color/purple_200"
+    android:background="@android:color/background_light"
     android:orientation="horizontal">
 
     <ImageView
