--- a/app/src/main/res/layout/fight_view.xml
+++ b/app/src/main/res/layout/fight_view.xml
@@ -96,6 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:onClick="switchToItemList"
             android:text="Inventory"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ability1Image"
