--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="10dp"
-    android:background="@android:color/background_light"
+    android:background="#99FFFFFF"
     android:orientation="horizontal">
 
     <ImageView
@@ -20,14 +20,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txtItemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Item name"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/txtItemNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Number of item"
