Kommentteja lisätty sekä kuolleiden tallennus ja lataus tehty

--- a/app/src/main/res/layout/lutemon_view.xml
+++ b/app/src/main/res/layout/lutemon_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="225dp"
+    android:layout_height="245dp"
     android:layout_marginTop="12dp"
     android:background="@android:color/transparent"
     android:orientation="horizontal">
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="string/Name"
+            android:textColor="@color/black"
             android:textSize="22sp" />
 
         <TextView
@@ -32,7 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Colour"
-            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -40,55 +42,63 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Attack"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonDefence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Defence"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonHealth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Health"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonLevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Level"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonBattles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Battles"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonTrainingDays"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Training Days"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonVictories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Victories"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtLutemonDefeats"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Defeats"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
