--- a/app/src/main/res/layout/activity_inventory_list.xml
+++ b/app/src/main/res/layout/activity_inventory_list.xml
@@ -13,4 +13,17 @@
         android:layout_height="729dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
+
+    <Button
+        android:id="@+id/btnReturnToFight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="switchToFightView"
+        android:text="Return"
+        app:layout_constraintBottom_toBottomOf="@+id/rvInventoryList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rvInventoryList"
+        app:layout_constraintVertical_bias="0.925" />
 </androidx.constraintlayout.widget.ConstraintLayout>
