--- a/app/src/main/res/layout/fight_view.xml
+++ b/app/src/main/res/layout/fight_view.xml
@@ -202,7 +202,7 @@
         app:layout_constraintHorizontal_bias="0.547"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/poisonous_fart" />
+        app:srcCompat="@drawable/meatmallet_transparent" />
 
     <ImageView
         android:id="@+id/imageDogeAttack"
