lisätty return napit lutemonien listausnäkymiin

--- a/app/src/main/res/layout/activity_inventory_list.xml
+++ b/app/src/main/res/layout/activity_inventory_list.xml
@@ -11,8 +11,8 @@
         android:id="@+id/rvInventoryList"
         android:layout_width="409dp"
         android:layout_height="729dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnReturnToFight"
