--- a/app/src/main/res/layout/fragment_dead_lutemons.xml
+++ b/app/src/main/res/layout/fragment_dead_lutemons.xml
@@ -19,5 +19,17 @@
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/btnReturnMainMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="switchToMainActivity"
+            android:text="Return"
+            app:layout_constraintBottom_toBottomOf="@+id/rvDeadLutemonList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/rvDeadLutemonList"
+            app:layout_constraintVertical_bias="0.925" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
